# os

./: .gitignore  upd.bat  upd.sh
lab1/: CMakeLists.txt
lab1/source/: main.cpp
lab2/: CMakeLists.txt
lab2/source/: example.c  main.cpp  process.cpp  process.h
lab3/: CMakeLists.txt
lab3/source/: main.cpp  my_thread.hpp  process.cpp  process.h
lab4/: CMakeLists.txt
lab4/source/: crc.h  main.cpp  simulacron.cpp
lab5/: CMakeLists.txt  build.bat  build.sh
lab5/source/: crc.h  main.cpp  my_serial.hpp  server.cpp  simulacron.cpp
lab6_7/: CMakeLists.txt  authform.cpp  authform.h  authform.ui  form.cpp  help.txt  kerfur.cpp  kerfur.h  kerfur.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settings.ui
lab6_7/resources/: resources.qrc
